# drexor-python

./: .env.example  AGENTS.md  CLAUDE.md  Dockerfile  Makefile  README.md  docker-compose.example.yml  pyproject.toml
app/: main.py  worker.py
app/api/: docs.py
app/api/auth/: api_keys.py  login.py  profile.py  register.py  totp.py  wallet.py
app/api/common/: routes.py
app/application/: README.md
app/config/: settings.py
app/core/security/: encryption.py
app/schemas/: common.py
app/schemas/auth/: __init__.py  api_key.py  login.py  totp.py  user.py  wallet.py
docs/: README.md
docs/api/: 01-认证.md  02-公共.md  03-WebSocket.md  README.md
docs/architecture/: README.md
docs/dev-phase/: 00-路线图.md  01-基础设施与架构整理.md  02-认证与API文档.md  03-多服务演进.md  README.md
docs/plan/: README.md
docs/product/: 01-产品概览.md  02-认证与用户.md  03-实时通信.md  README.md
scripts/: init_db.py
tests/: test_architecture.py
