[project]
name = "drexor-python"
version = "0.1.0"
description = "drexor-python - 用户认证、Web3 钱包、API Key、Redis、PostgreSQL、WebSocket 基础设施"
requires-python = ">=3.14"
authors = [
    {name = "Dexter"}
]
dependencies = [
    # ============ Web 框架核心 ============
    "fastapi>=0.135.3",          # FastAPI Web框架 - 高性能异步API框架
    "scalar-fastapi>=1.8.2",      # Scalar API Reference - 对外API文档界面
    "uvicorn[standard]>=0.44.0", # ASGI服务器 - 用于运行FastAPI应用(开发环境)
    "gunicorn>=25.3.0",          # WSGI/ASGI服务器 - 生产环境多进程管理器

    # ============ 网络通信 ============
    "websockets>=16.0",          # WebSocket协议 - 实时双向通信
    "httpx>=0.28.1",             # 异步HTTP客户端 - 替代requests的异步版本

    # ============ 数据验证和配置 ============
    "pydantic>=2.12.5",          # 数据验证 - 基于类型提示的数据验证和序列化
    "pydantic-settings>=2.13.1", # 配置管理 - Pydantic的设置管理扩展
    "python-dotenv>=1.2.2",      # 环境变量 - 从.env文件加载环境变量
    "email-validator>=2.3.0",    # 邮箱验证 - 验证邮箱地址格式

    # ============ 数据库 ============
    "sqlalchemy>=2.0.49",        # ORM框架 - Python最流行的数据库ORM
    "asyncpg>=0.31.0",           # PostgreSQL异步驱动 - 最快的PostgreSQL驱动
    "psycopg2-binary>=2.9.11",   # PostgreSQL同步驱动 - 传统的PostgreSQL驱动
    "alembic>=1.18.4",           # 数据库迁移 - SQLAlchemy的数据库版本管理工具
    "greenlet>=3.3.2",           # 协程支持 - SQLAlchemy异步操作的底层依赖

    # ============ 缓存 ============
    "redis>=7.4.0",              # Redis客户端 - 支持同步和异步操作的缓存数据库

    # ============ 日志和工具 ============
    "loguru>=0.7.3",             # 日志库 - 简单易用的Python日志库
    "python-multipart>=0.0.24",  # 表单数据解析 - 处理multipart/form-data(文件上传)

    # ============ 安全认证 ============
    "PyJWT>=2.12.1",             # JWT令牌 - 现代化的JWT库
    "bcrypt>=5.0.0",             # 密码哈希 - 直接使用bcrypt，无需passlib
    "pyotp>=2.9.0",              # TOTP两步验证 - 生成和验证一次性密码(Google Authenticator)
    "cryptography>=46.0.6",      # 加密库 - TOTP密钥加密

    # ============ Web3/钱包 ============
    "web3>=7.5.0",               # Web3 - EVM钱包签名验证

    # ============ 定时任务 ============
    "apscheduler>=3.11.2",       # 定时任务调度器 - 支持多种触发器和存储后端
    "croniter>=6.2.2",           # Cron 表达式解析 - 计算下次执行时间
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app", "packages"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]
